micro-depls/00-core-connectivity-k8s/k8s-config/manifests/15-jcr/jfrog-jcr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/proxy-read-timeout: "600"
    ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/v2/token /artifactory/api/docker/null/v2/token;
      rewrite ^/v2/([a-z-]*)/(.*) /artifactory/api/docker/$1/v2/$2;
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
#NB: the rewrite rule limits the docker org
  labels:
    app: artifactory
  name: jfrog-jcr
  namespace: jcr
spec:
  ingressClassName: nginx
  rules:
  - host: jcr-k8s.((/secrets/cloudfoundry_ops_domain))
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jfrog-jcr-artifactory-active
            port:
              number: 8082

  tls:
  - hosts:
    - jcr-k8s.((/secrets/cloudfoundry_ops_domain))
    secretName: jcr-ssl
